--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,34 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
   <meta charset="utf-8">
-  <title>AngularFides</title>
+  
+  <title>Spondeo | Encontre as melhores vagas e oportunidades</title>
+  
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <meta name="description" content="Descubra vagas alinhadas ao seu perfil em poucos segundos na Spondeo. Conectamos os melhores talentos às oportunidades mais alinhadas do mercado.">
+  
+  <meta name="robots" content="index, follow">
+  
+  <link rel="canonical" href="https://spondeo.com.br/">
+
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://spondeo.com.br/">
+  <meta property="og:title" content="Spondeo | Encontre as melhores vagas e oportunidades">
+  <meta property="og:description" content="Descubra vagas alinhadas ao seu perfil em poucos segundos na Spondeo.">
+  <meta property="og:image" content="https://spondeo.com.br/Spondeo-logo.webp">
+
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://spondeo.com.br/">
+  <meta property="twitter:title" content="Spondeo | Encontre as melhores vagas e oportunidades">
+  <meta property="twitter:description" content="Descubra vagas alinhadas ao seu perfil em poucos segundos na Spondeo.">
+  <meta property="twitter:image" content="https://spondeo.com.br/Spondeo-logo.webp">
+
+  <meta name="theme-color" content="#ffffff">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="apple-touch-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
