chore(seo): update canonical and social urls for github pages

--- a/src/index.html
+++ b/src/index.html
@@ -12,19 +12,19 @@
   
   <meta name="robots" content="index, follow">
   
-  <link rel="canonical" href="https://spondeo.com.br/">
+  <link rel="canonical" href="https://raphaelmun1z.github.io/WS2-FRONT/">
 
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://spondeo.com.br/">
+  <meta property="og:url" content="https://raphaelmun1z.github.io/WS2-FRONT/">
   <meta property="og:title" content="Spondeo | Encontre as melhores vagas e oportunidades">
   <meta property="og:description" content="Descubra vagas alinhadas ao seu perfil em poucos segundos na Spondeo.">
-  <meta property="og:image" content="https://spondeo.com.br/Spondeo-logo.webp">
+  <meta property="og:image" content="https://raphaelmun1z.github.io/WS2-FRONT/Spondeo-logo.webp">
 
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://spondeo.com.br/">
+  <meta property="twitter:url" content="https://raphaelmun1z.github.io/WS2-FRONT/">
   <meta property="twitter:title" content="Spondeo | Encontre as melhores vagas e oportunidades">
   <meta property="twitter:description" content="Descubra vagas alinhadas ao seu perfil em poucos segundos na Spondeo.">
-  <meta property="twitter:image" content="https://spondeo.com.br/Spondeo-logo.webp">
+  <meta property="twitter:image" content="https://raphaelmun1z.github.io/WS2-FRONT/Spondeo-logo.webp">
 
   <meta name="theme-color" content="#ffffff">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
